--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2.5|^8.0",
         "doctrine/dbal": "^3.1",
         "fideloper/proxy": "^4.4",
+        "laracasts/flash": "^3.2",
         "laravel/framework": "^6.20.26",
         "laravel/tinker": "^2.5"
     },
