--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
     "require-dev": {
         "facade/ignition": "^1.16.15",
         "fakerphp/faker": "^1.9.1",
+        "lucascudo/laravel-pt-br-localization": "^1.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.5.8|^9.3.3",
-        "lucascudo/laravel-pt-br-localization": "^1.1"
+        "phpunit/phpunit": "^8.5.8|^9.3.3"
     },
     "config": {
         "optimize-autoloader": true,
